Add todo list to main screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/todos_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="@id/parent"
-        app:layout_constraintEnd_toEndOf="@id/parent"
         app:layout_constraintTop_toTopOf="@id/parent"
-        app:layout_constraintBottom_toBottomOf="@id/parent"
-        android:text="@string/hello_world"/>
+        android:paddingBottom="16dp"
+        android:clipToPadding="false"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
